tao swagger cho category
